# cublas

./: .gitignore  CMakeLists.txt  LICENSE  compile.sh  complex.sh  complex_eigen.sh  main.cpp  matrix_multiplication.cu  matrix_multiplication_complex.cu  matrix_multiplication_complex_eigen.cu  real.sh
env/: saga.env
src/: matrix_mul_cpu.cpp  matrix_mul_cpu.h  matrix_mul_gpu.cu  matrix_mul_gpu.h
tests/: catch_main.cpp
